[package]
name = "calculator-wasm-rust-pwa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }
log = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
